# chat-with-msql

./: .env.example  .gitignore  main.py  pyproject.toml
src/: REAMDE.md  app.py  config.yaml  main.py
